--- a/Built-in Data Structures.ipynb
+++ b/Built-in Data Structures.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "a9172a4b",
    "metadata": {},
    "outputs": [
@@ -443,6 +443,204 @@
    "source": [
     "t = 1, 2, 3\n",
     "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "263efe57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "78c9c950",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "90f9ee85",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mt\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m = \u001b[32m4\u001b[39m\n",
+      "\u001b[31mTypeError\u001b[39m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "t[1] = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f257c99c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mappend\u001b[49m(\u001b[32m4\u001b[39m)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "t.append(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "26d8f206",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 0.125 \n",
+    "x.as_integer_ratio()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "75009423",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.125\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerator, denominator = x.as_integer_ratio()\n",
+    "print(numerator/denominator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68bdd1a6",
+   "metadata": {},
+   "source": [
+    "# Dictionaries "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dab32905",
+   "metadata": {},
+   "source": [
+    "<li>extremely flexible mappings of keys to values, and form the basis of much of Python's internal implementation \n",
+    "<li>can be created via a comma-separated list of key: value pairs within curly braces "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f548e15e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = {'one': 1, 'two': 2, 'three': 3} \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "30c4e5a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Access a value via the key\n",
+    "\n",
+    "numbers['two']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1a2d23ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'one': 1, 'two': 2, 'three': 3, 'ninety': 90}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Set a new key:value pair \n",
+    "\n",
+    "numbers['ninety'] = 90 \n",
+    "print(numbers)"
    ]
   }
  ],
