--- a/Built-in Data Structures.ipynb
+++ b/Built-in Data Structures.ipynb
@@ -642,6 +642,145 @@
     "numbers['ninety'] = 90 \n",
     "print(numbers)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b37af0df",
+   "metadata": {},
+   "source": [
+    "# Sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad1fc121",
+   "metadata": {},
+   "source": [
+    "<li> contains unordered collections of unique items\n",
+    "<li> defined much like lists and tuples, except they use the curly brackets of dictionaries "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0cd17f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primes = {2, 3, 5, 7}\n",
+    "odds= {1, 3, 5, 7, 9}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8205650c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 5, 7, 9}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#union : items appearing in either \n",
+    "primes | odds #with an operator \n",
+    "primes.union(odds) #equivalently with a method \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "03ceae89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 5, 7}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#intersection: items appearing in both \n",
+    "primes & odds #with an operator \n",
+    "primes.intersection(odds) #equivalently with a method \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0aff6ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#difference: items in primes but not in odds \n",
+    "primes - odds #with an operator\n",
+    "primes.difference(odds) #equivalently with a method "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "992fce45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 9}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#symmetric difference: items appearing in only one set \n",
+    "primes ^ odds #with an operator\n",
+    "primes.symmetric_difference(odds) #equivalently with a method "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ee20743",
+   "metadata": {},
+   "source": [
+    "# More Specialized Data Structures "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b7508a5",
+   "metadata": {},
+   "source": [
+    "<li> collections.namedtuple: like a tuple but each value has a name \n",
+    "<li>collections.defaultdict: like a dictionary, but unspecified keys have a user-specified default value \n",
+    "<li>collections.OrderedDict: like a dictionary, but the order of keys is maintained \n"
+   ]
   }
  ],
  "metadata": {
